--- a/userguide/csaw.Rnw
+++ b/userguide/csaw.Rnw
@@ -50,7 +50,7 @@
 % Set to change date for document, not compile date.
 \date{First edition 15 August 2012\\
 \vspace{6pt}
-Last revised 18 January 2015}
+Last revised 20 January 2015}
 
 % Removing the bibliography title so it shows up in the contents.
 \makeatletter
@@ -2071,10 +2071,12 @@ This is relevant for consideration of complex events, e.g., adjacent TF binding 
 Loss of information also increases the sensitivity of the analysis to the clustering procedure.
 For example, a DB site will be ignored if it is clustered alongside a stronger non-DB site.
 
-% This may be necessary if you don't want to have high spatial resolution, for whatever reason.
-% For example, if you have changes in the average fragment length between libraries, you don't want
-% to pick up shrunken peaks just because of that. Selecting the most abundant window will 
-% ensure that you don't pick up changes on the edges of the peak.
+% This may be necessary if you don't want to have high spatial resolution, for
+% whatever reason.  For example, if you just want to find peaks that are just
+% on/off, then you look at the DB for the window with the maximum abundance.
+% This still has some advantages over straight-up peak calling, as you still
+% maintain high resolution, i.e. you don't get contamination from miscalled
+% peak boundaries.
 
 A more graduated approach uses a weighted version of Simes' method \citep{benjamini1997}, where the highest-abundance window is upweighted.
 In the example below, the weight assigned to the top window is equal to the total number of other windows in each cluster.
